2009-04-05  Sebastien Pouliot  <sebastien@ximian.com>

	* NativeDependencyObjectHelper.cs: Add missing Stroke to the 
	switch/case. Progress on DRT#649

2010-04-01  Alan McGovern  <amcgovern@novell.com>

	* MarkupExpressionParser.cs: Add handling for the '{}' escape
	  string in MarkupExpressionParser. Also add parser support
	  for the new SL4 binding types.

2010-03-30  Alan McGovern  <amcgovern@novell.com>

	* Value.cs:
	* NativeDependencyObjectHelper.cs: StylusPoint is a DO in
	  native and a struct in managed, so give it the same magic
	  marshalling treatment that Matrix gets.

2010-03-30  Alan McGovern  <amcgovern@novell.com>

	* Types.cs: Make System.Enum be the base type of all enums so
	  we can have a typesafe Value::AsEnum () method in native.

2010-03-29  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: We need to try looking up attached
	properties with the prop's xmlns even if it is null, if that
	doesn't work then we can try looking up with the element's xmlns.
	Fixes attached properties in the default namespace on custom
	elements.

2010-03-29  Alan McGovern  <amcgovern@novell.com>

	* Value.cs: Check that the type is non-null before accessing
	  it so we emit the right warning if a type could not be
	  found.

2010-03-29  Alan McGovern  <amcgovern@novell.com>

	* NativeDependencyObjectHelper.cs: This wasn't supposed to hit
	  SVN.

2010-03-29  Alan McGovern  <amcgovern@novell.com>

	* Value.cs:
	* ManagedXamlLoader.cs:
	* MoonlightTypeConverter.cs:
	* NativeDependencyObjectHelper.cs: Add enums to our type
	  system so that we don't lose type information when
	  attempting to parse them from xaml.


	* Types.cs: When registering an enum in our type system, make
	  its base type "System.Object" instead of
	  System.Enum/System.ValueType. This simplifies the type
	  system slightly and allows us to easily add enums to
	  properties which are Type::OBJECT. We also need to count all
	  value types (and enums) as having a public ctor.

